Explicit typewriter div height to prevent jumping

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,7 +93,6 @@ body {
   border: 0.05em solid rgb(255, 255, 255);
   border-radius: 50%;
   position: absolute;
-  z-index: 0;
 }
 
 .left.orbit::after {
